---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "put skip, a : 1, b : 2 : 3, c : 4 : 5 : 6"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..41): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..41): []
        Put@(FileId(1), 0..41): newline
          Name@(FileId(1), 10..11): "a"@(FileId(1), 10..11), undeclared
          Literal@(FileId(1), 14..15): Integer(1)
          Name@(FileId(1), 17..18): "b"@(FileId(1), 17..18), undeclared
          Literal@(FileId(1), 21..22): Integer(2)
          Literal@(FileId(1), 25..26): Integer(3)
          Name@(FileId(1), 28..29): "c"@(FileId(1), 28..29), undeclared
          Literal@(FileId(1), 32..33): Integer(4)
          Literal@(FileId(1), 36..37): Integer(5)
          Literal@(FileId(1), 40..41): Integer(6)
error at (FileId(1), 10..11): `a` is undeclared
| error for (FileId(1), 10..11): no definitions of `a` are in scope
error at (FileId(1), 17..18): `b` is undeclared
| error for (FileId(1), 17..18): no definitions of `b` are in scope
error at (FileId(1), 28..29): `c` is undeclared
| error for (FileId(1), 28..29): no definitions of `c` are in scope

